--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -130,6 +130,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="board.cpp" />
+    <ClCompile Include="board.cppm" />
+    <ClCompile Include="bridge.cpp" />
+    <ClCompile Include="bridge.cppm" />
     <ClCompile Include="Project Modern C++.cpp" />
     <ClCompile Include="pylon.cpp" />
     <ClCompile Include="pylon.cppm" />
