--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="board.cppm" />
     <ClCompile Include="bridge.cpp" />
     <ClCompile Include="bridge.cppm" />
+    <ClCompile Include="bulldozer.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="game.cppm" />
     <ClCompile Include="player.cpp" />
@@ -141,6 +142,9 @@
     <ClCompile Include="Project Modern C++.cpp" />
     <ClCompile Include="pylon.cpp" />
     <ClCompile Include="pylon.cppm" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bulldozer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
