Converted the module class Game to header.

--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="game.cppm">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="game.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -54,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bulldozer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
