--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -136,7 +136,6 @@
     <ClCompile Include="bridge.cppm" />
     <ClCompile Include="bulldozer.cpp" />
     <ClCompile Include="game.cpp" />
-    <ClCompile Include="game.cppm" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="player.cppm" />
     <ClCompile Include="Project Modern C++.cpp" />
@@ -145,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bulldozer.h" />
+    <ClInclude Include="game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
