Added LargePylon class to implement a new game mode.

--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
@@ -48,12 +48,18 @@
     <ClCompile Include="bulldozer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LargePylon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bulldozer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LargePylon.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
