--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="bridge.cppm" />
     <ClCompile Include="bulldozer.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="LargePylon.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="player.cppm" />
     <ClCompile Include="Project Modern C++.cpp" />
@@ -145,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="bulldozer.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="LargePylon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
