Added module utility . Made a template swap function.

--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -142,6 +142,8 @@
     <ClCompile Include="Project Modern C++.cpp" />
     <ClCompile Include="pylon.cpp" />
     <ClCompile Include="pylon.cppm" />
+    <ClCompile Include="utility.cpp" />
+    <ClCompile Include="utility.cppm" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bulldozer.h" />
