--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="LargePylon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utility.cppm">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bulldozer.h">
