--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="bridge.cppm" />
     <ClCompile Include="bulldozer.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="GameFileManager.cpp" />
     <ClCompile Include="LargePylon.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="player.cppm" />
@@ -149,7 +150,11 @@
   <ItemGroup>
     <ClInclude Include="bulldozer.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="GameFileManager.h" />
     <ClInclude Include="LargePylon.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="savedGame.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
