--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -46,7 +46,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -107,7 +107,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <EnableModules>true</EnableModules>
       <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
-      <AdditionalIncludeDirectories>C:\Qt2try\6.2.4\msvc2019_64\include\QtWidgets;C:\Qt2try\6.2.4\msvc2019_64\include\</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Facultate\6.6.1\msvc2019_64\include\QtWidgets;D:\Facultate\6.6.1\msvc2019_64\include\QtGui;D:\Facultate\6.6.1\msvc2019_64\include\QtCore;D:\Facultate\6.6.1\msvc2019_64\include\;C:\Qt2try\6.2.4\msvc2019_64\include\QtWidgets;C:\Qt2try\6.2.4\msvc2019_64\include\</AdditionalIncludeDirectories>
       <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
@@ -124,6 +124,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <AdditionalIncludeDirectories>D:\Facultate\6.6.1\msvc2019_64\include\QtWidgets;D:\Facultate\6.6.1\msvc2019_64\include\QtGui;D:\Facultate\6.6.1\msvc2019_64\include\QtCore;D:\Facultate\6.6.1\msvc2019_64\include\;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
