Connected EllipseWidget::clicked with QtWidgetsProject::onEllipseClick

--- a/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj
+++ b/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj
@@ -37,7 +37,7 @@
     <Import Project="$(QtMsBuild)\qt_defaults.props" />
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
-    <QtInstall>6.6.1_msvc2019_64</QtInstall>
+    <QtInstall>6.2.4_msvc2019_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
@@ -66,7 +66,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>E:\QT\6.6.1\msvc2019_64\include\;D:\Facultate\6.6.1\msvc2019_64\include\;$(SolutionDir)Project Modern C++;C:\Qt2try\6.2.4\msvc2019_64\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Qt2try\6.2.4\msvc2019_64\include\;E:\QT\6.6.1\msvc2019_64\include\;D:\Facultate\6.6.1\msvc2019_64\include\;$(SolutionDir)Project Modern C++;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
