Added header WinnerDialog

--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="player.h" />
     <ClInclude Include="pylon.h" />
     <ClInclude Include="utility.h" />
+    <ClInclude Include="WinnerDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="savedGame.txt" />
