--- a/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
+++ b/Project Modern C++/Project Modern C++/Project Modern C++.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WinnerDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="savedGame.txt" />
