Added method checkWinner.

--- a/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj.filters
+++ b/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj.filters
@@ -49,4 +49,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Project Modern C++\WinnerDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
