--- a/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj
+++ b/Project Modern C++/QtWidgetsProject/QtWidgetsProject.vcxproj
@@ -114,6 +114,9 @@
   <ItemGroup>
     <QtMoc Include="EllipseWidget.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Project Modern C++\WinnerDialog.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
